<resources>

    <!--LoginStrings-->
    <string name="app_name">foroshgah_slami</string>
    <string name="content_description">image</string>
    <string name="title_login">LOGIN</string>
    <string name="et_hint_email_id">Email ID</string>
    <string name="et_hint_password">password</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="title_forgot_password">FORGOT PASSWORD?</string>
    <string name="forgot_password_title_description">Enter your username and e-mail address we\'ll send you a email to reset your password</string>
    <string name="email_sent_success">\"Email sent successfully to reset your password! \"</string>
    <string name="btn_lbl_submit">Submit</string>
    <string name="btn_lbl_login">Login</string>
    <string name="don_t_have_an_account">don\'t have an account?</string>
    <string name="register"><u>Register</u></string>
    <string name="editText_text">abc@gmail.com</string>
    <string name="password_text">123456</string>

    <!--RegisterStrings-->
    <string name="create_an_account">CREATE AND ACCOUNT</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_first_name">First name</string>
    <string name="et_hint_confirm_password">Confirm Password</string>
    <string name="i_agree_to_the_terms_and_conditions">I Agree To The <u> Terms &amp; Conditions</u></string>
    <string name="btn_lbl_register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login"><u>Login</u></string>


    <!--RegisterErrStrings-->
    <string name="err_msg_enter_first_name">Please enter first name.</string>
    <string name="err_msg_enter_last_name">Please enter last name.</string>
    <string name="err_msg_enter_email">Please enter email</string>
    <string name="err_msg_enter_password">Please enter password</string>
    <string name="err_msg_enter_confirm_password">Please enter confirm password</string>
    <string name="err_msg_password_and_confirm_password_mismatch">Password and confirm password mismatch</string>
    <string name="err_msg_agrre_terms_and_conditions">Please agree terms and conditions</string>
    <string name="registery_successful">You are registered successfully. Your user id is</string>

    <!--Progress Bar-->
    <string name="please_wait">Please wait&#8230;</string>
    <string name="register_succsess">You are registered successfully.</string>
    <string name="Hello">Hello</string>

    <!--CompleteUserStrings-->

    <string name="title_compete_profile">PROFILE</string>
    <string name="et_hint_mobile_number">Mobile Number</string>
    <string name="rb_lbl_male">MALE</string>
    <string name="rb_lbl_female">FEMALE</string>
    <string name="btn_lbl_save">Save</string>
    <string name="read_storage_permission_denied">Oops, you just denied the permission for storage. you can also allow it from settings.</string>
    <string name="image_selection_failed">Image selection Successfully Failed!</string>
    <string name="err_msg_enter_mobile_number">Please enter your phone number</string>
    <string name="msg_profile_update_success">Your profile is updated successfully.</string>
    <string name="please_click_back_again_to_exit">Please click back again to exit</string>


    <string name="title_products">products</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_orders">orders</string>
    <string name="title_activity_bottom_nav">Bottom_Nav_activity</string>
    <string name="action_settings">Settings</string>

    <string name="title_settings">Settings</string>
    <string name="lbl_edit">Edit</string>
    <string name="lvl_address">Addresses</string>
    <string name="btn_lbl_logout">Logout</string>
    <string name="unknown">Unknown</string>
    <string name="Edit_profile">Edit Profile</string>


</resources>